<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".ui.detailMovie.DetailMovieActivity">

    <ImageView
        android:id="@+id/movieBackdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/movie_backdrop" />

    <ImageButton
        android:id="@+id/btnBackPage"
        android:background="@null"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_baseline_arrow_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieTopTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/temp_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnBackPage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Skeleton Layout -->
        <com.faltenreich.skeletonlayout.SkeletonLayout
            android:id="@+id/skeletonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="centerCrop"
                    android:src="@color/amber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:maxLines="2"
                    android:text="@string/temp_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/moviePoster"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <ImageButton
                    android:id="@+id/btnFavoriteMovie"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/button_favorite"
                    android:src="@drawable/ic_baseline_favorite_white"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toTopOf="@+id/title_01"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2" />

                <TextView
                    android:id="@+id/movieReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/temp_date"
                    app:layout_constraintStart_toEndOf="@+id/moviePoster"
                    app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/icon_dot"
                    android:src="@drawable/ic_baseline_dot_grey"
                    app:layout_constraintStart_toEndOf="@+id/movieReleaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/temp_duration"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/movieRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:max="5"
                    android:theme="@style/RatingBar"
                    app:layout_constraintStart_toEndOf="@+id/moviePoster"
                    app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate" />

                <ImageView
                    android:id="@+id/titleBar01"
                    android:layout_width="8dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/titlebar"
                    android:src="@color/purple_700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

                <TextView
                    android:id="@+id/title_01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/information"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/titleBar01"
                    app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

                <HorizontalScrollView
                    android:id="@+id/genresContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:paddingVertical="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_01">

                    <LinearLayout
                        android:id="@+id/movieGenres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Some Code here... -->
                    </LinearLayout>
                </HorizontalScrollView>

                <ImageView
                    android:id="@+id/titleBar02"
                    android:layout_width="8dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/titlebar"
                    android:src="@color/purple_700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/genresContainer" />

                <TextView
                    android:id="@+id/title_02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sinopsis"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/titleBar02"
                    app:layout_constraintTop_toBottomOf="@+id/genresContainer" />

                <TextView
                    android:id="@+id/movieSinopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/temp_sinopsis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_02" />

                <ImageView
                    android:id="@+id/titleBar03"
                    android:layout_width="8dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/titlebar"
                    android:src="@color/purple_700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieSinopsis" />

                <TextView
                    android:id="@+id/title_03"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/trailer"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/titleBar02"
                    app:layout_constraintTop_toBottomOf="@+id/movieSinopsis" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_03">

                    <WebView
                        android:id="@+id/movieTrailer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/youtubeProgressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.faltenreich.skeletonlayout.SkeletonLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>