...
            android:layout_marginStart="15dp"
            android:text="@string/list_of_movies"
            android:textColor="#2B2B2B"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/indicatorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_indicator"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_expand_less_purple" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
